nosotras animacion, alineacion footer y contacto

--- a/contacto.html
+++ b/contacto.html
@@ -86,8 +86,8 @@
     <main class="container">
         <section class="row my-5 justify-content-center">
             <article class="col-lg-6 col-md-10">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6">
+                <div class="row h-100">
+                    <div class="col-md-6 col-sm-6 align-items-center">
                         <p class="contacto-tit">Contacto</p>
                         <div class="item_contacto">
                             <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
@@ -102,7 +102,7 @@
                             <p>Recta Martinolli 7759</p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-6 col-sm-6 align-items-center">
                         <p class="contacto-tit">Nuestas Redes Sociales</p>
                         <div class="item_redes">
                             <img src="logos/Insta-logo.png" alt="Instagram" widht=40 height=40>
@@ -115,13 +115,11 @@
                                 Facebook</a>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12 mt-5">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
-                                title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen=""
-                                loading="lazy" class="mapa"></iframe>
-                        </div>
+                    <div class="col-12">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
+                            title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen=""
+                            loading="lazy" class="mapa"></iframe>
                     </div>
                 </div>
             </article>
