--- a/info.html
+++ b/info.html
@@ -101,7 +101,7 @@
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <section class="info1">
-                                <video src="img/video-sahumar.mov" title="Sahumar" autoplay muted loop></video>
+                                <video src="img/video-sahumar.mp4" title="Sahumar" autoplay muted loop></video>
                                 <article class="main_art_video">
                                     <h4 class="main_art_tit">¿Que es y como SAHUMAR?</h3>
                                         <p> Sahumar significa quemar elementos naturales (plantas, resinas, maderas o
@@ -237,8 +237,11 @@
         </section>
 
         <h2>Ser concientes de nuestra Naturaleza</h2>
-
+        
         <section class="container">
+            <p>Ademas de ofrecerles nuestros
+                productos, dede RUH queremos aportar un poco de conciencia ambiental para mejorar nuestros hábitos y
+                relacionarnos de una manera más cuidadosa con el planeta, les compartimos algunos Tips de como cuidar nuestro medio ambiente incorporando nuevos habitos.</p>
             <article class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingfour">
