--- a/mayorista.html
+++ b/mayorista.html
@@ -98,7 +98,7 @@
                 <p>Podes elegir modelo del envase, decoración y etiqueta (te proponemos opciones de diseño o concretamos
                     tu idea)</p>
                 <div class="btn">
-                    <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
+                    <a href="contacto.html"> ESCRIBINOS Y <br>TE ASESORAMOS!</a> </a>
                 </div>
             </figure>
         </div>
