--- a/productos.html
+++ b/productos.html
@@ -85,74 +85,124 @@
         <h2>Nuestos Productos</h2>
     </section>
 
+   
     <section class="container">
-        <article class="row justify-content-center">
-            <section id="sahumerios"></section>
-            <h3>Sahumerios</h3>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/Prod-Palo-Santo.png" alt="Palo Santo" class="item_img">
-                <p>Linea Palo Santo</p>
+        <h3 class="prod-tit" id="sahumerios"> * Sahumerios</h3>
+        <article class="row card-row">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/Prod-Palo-Santo.png" class="card-img-top" alt="Palo Santo">
+                    <div class="card-body">
+                        <p class="card-text">Linea Palo Santo </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-saumerios.png" alt="Natural" class="item_img">
-                <p>Linea Natural</p>
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-saumerios.png" class="card-img-top" alt="Linea Natural">
+                    <div class="card-body">
+                        <p class="card-text">Linea Natural</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-s-premium.png" alt="Premium" class="item_img">
-                <p>Linea Premium</p>
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-s-premium.png" class="card-img-top" alt="Linea Premium">
+                    <div class="card-body">
+                        <p class="card-text">Linea Premium </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-porta-shau.png" alt="portasahumerio" class="item_img">
-                <p>Porta Sahumerio de madera</p>
+            
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-porta-shau.png" class="card-img-top" alt="Porta Sahumerios">
+                    <div class="card-body">
+                        <p class="card-text">Porta Sahumerios de madera</p>
+                    </div>
+                </div>
             </div>
         </article>
     </section>
 
+
     <section class="container">
-        <article class="row justify-content-center">
-            <section id="sahumos"></section>
-            <h3>Sahumos y defumadores</h3>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-sahumo-1.png" alt="Sahumo" class="item_img">
-                <p>Ramillo de Sahumo</p>
+        <h3 class="prod-tit" id="sahumos"> * Sahumos y Defumadores</h3>
+        <article class="row card-row">
+            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-sahumo-1.png" class="card-img-top" alt="Ramillo de Sahumo">
+                    <div class="card-body">
+                        <p class="card-text">Ramillo de Sahumo</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-Pastillas.png" alt="Pastillas" class="item_img">
-                <p>Pastillas Defumadoras</p>
+            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-Pastillas.png" class="card-img-top" alt="Pastillas defumadoras">
+                    <div class="card-body">
+                        <p class="card-text">Pastillas Defumadoras</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-piramide.png" alt="Piramides" class="item_img">
-                <p>Piramides Defumadoras</p>
+            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-piramide.png" class="card-img-top" alt="Piramides defumadoras">
+                    <div class="card-body">
+                        <p class="card-text">Piramides Defumadoras</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-bombitas.png" alt="Bombitas" class="item_img">
-                <p>Bombitas Defumadoras</p>
+            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-bombitas.png" class="card-img-top" alt="Bombitas defumadores">
+                    <div class="card-body">
+                        <p class="card-text">Bombitas Defumadoras</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-siete-chacras.png" alt="7 Chachras" class="item_img">
-                <p>Bombitas 7 Chakras </p>
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-siete-chacras.png" class="card-img-top" alt="7 chakras">
+                    <div class="card-body">
+                        <p class="card-text">Bombitas 7 Chakras</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-sahumadores.png" alt="Sahumadores" class="item_img">
-                <p>Sahumador de ceramica</p>
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-sahumadores.png" class="card-img-top" alt="Shaumador Ceramica">
+                    <div class="card-body">
+                        <p class="card-text">Sahumador de ceramica</p>
+                    </div>
+                </div>
             </div>
         </article>
     </section>
 
+  
     <section class="container">
-        <article class="row justify-content-center">
-            <section id="sahumos"></section>
-            <h3>Sahumos y defumadores</h3>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-velas.png" alt="Velas" class="item_img">
-                <p>Vela con flores</p>
+        <h3 class="prod-tit" id="velas"> * Velas de cera vegetal</h3>
+        <article class="row card-row">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-velas.png" class="card-img-top" alt="Vela con decoración">
+                    <div class="card-body">
+                        <p class="card-text">Vela con flores</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="img/prod-velitas.png" alt="Velitas" class="item_img">
-                <p>Mini Velitas de madera</p>
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+                <div class="card card-home">
+                    <img src="img/prod-velitas.png" class="card-img-top" alt="Mini velas">
+                    <div class="card-body">
+                        <p class="card-text">Mini Velas de madera</p>
+                    </div>
+                </div>
             </div>
         </article>
     </section>
+
 
     <!-- footer  -->
 
