--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/carousel-1.jpg" class="d-block w-100 " alt="portada">
+                <img src="img/carousel-1.png" class="d-block w-100 " alt="portada">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos. </p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/carousel-2.jpg" class="d-block w-100" alt="portada1" sizes="auto">
+                <img src="img/carousel-2.png" class="d-block w-100" alt="portada1" sizes="auto">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/carousel-3.jpg" class="d-block w-100" alt="portada2">
+                <img src="img/carousel-3.png" class="d-block w-100" alt="portada2">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel"> Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
@@ -199,7 +199,7 @@
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
-
+    
                 <div class="redes">
                     <div class="redes_tit">Sigamos conectados</div>
                     <div class="redes_iconos">
@@ -212,7 +212,7 @@
                         <p class="logo-tit-f">| Ruh - Esencia |</p>
                     </div>
                 </div>
-
+    
                 <section class="foot_contacto">
                     <div class="foot_contacto_tit">Contactanos</div>
                     <div>
@@ -237,7 +237,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
