--- a/nosotras.html
+++ b/nosotras.html
@@ -82,63 +82,67 @@
     </header>
 
     <!-- main -->
+    <main class="body-nosotras">
+        <!-- section 1 -->
 
-    <!-- section 1 -->
+        <section class="nos_portada">
+        
+            <article class="nos_portada_art">
+                <h2>Nosotras</h2>
+                <p>Ruh nace, desde la conexión con la naturaleza activando nuestros sentidos atravez de esencias,
+                    cereemos
+                    que
+                    es fundamental hacer pausas y darnos un espacio para desconectar y re-conectar con nosotros mismos,
+                    permitiendonos ser y alimentar nuestro crecimiento personal, el poder de conocernos en esencia.</p>
+                <p>El nombre de nuestra marca significa crecer, en sánscrito, se define como el lado no material o
+                    esencia
+                    del
+                    ser humano.</p>
+            </article>
+        </section>
 
-    <section class="nos_portada">
-        <article class="nos_portada_art">
-            <h2>Nosotras</h2>
-            <p>Ruh nace, desde la conexión con la naturaleza activando nuestros sentidos atravez de esencias, cereemos
-                que
-                es fundamental hacer pausas y darnos un espacio para desconectar y re-conectar con nosotros mismos,
-                permitiendonos ser y alimentar nuestro crecimiento personal, el poder de conocernos en esencia.</p>
-            <p>El nombre de nuestra marca significa crecer, en sánscrito, se define como el lado no material o esencia
-                del
-                ser humano.</p>
-            <p>Dede RUH siempre quisimos aportar un poco de conciencia ambiental para mejorar nuestros hábitos y
-                relacionarnos de una manera más cuidadosa con el planeta es por eso que ademas de ofrecerles nuestros
-                productos les compartimos Tips de como cuidar nuestro medio ambiente incorporando nuevos habitos.</p>
-        </article>
-    </section>
+        <!-- Section 2 -->
 
-    <!-- Section 2 -->
-
-    <section class="container">
-        <article class="row justify-content-center card-nos">
-            <div class="col-lg-6 col-md-8">
-                <img src="img/jose.png" alt="Jose Ramos" class="nos_main_img">
-                <article class="nos_main_art">
-                    <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
-                        parte
-                        de
-                        mi,
-                        ya que los que me conocen saben cuanto disfruto y amo los momentos de conexión con la
-                        naturaleza.
-                        Con el
-                        tiempo me di cuenta que desde chiquita le presté mucha atención a nuestro entorno y lo que pasa
-                        en
-                        él
-                        y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
-                </article>
-            </div>
-            <div class="col-lg-6 col-md-8">
-                <img src="img/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
-                <article class="nos_main_art">
-                    <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
-                        tambien
-                        soy profe de yoga.
-                        El yoga para mi, es un camino para descubrirse todos los días, es un momento para conectarse con
-                        el
-                        presente y escucharse y
-                        a uno mismo.
-                        Me encanta acompañañar esta practica, con nuestros productos, ya que consolidan los sentidos con
-                        su
-                        esencia.</p>
-                </article>
-            </div>
-        </article>
-    </section>
-
+        <section class="container">
+            <article class="row justify-content-center card-nos">
+                <div class="col-lg-6 col-md-8 cont-colum">
+                    <img src="img/jose.png" alt="Jose Ramos">
+                    <article class="nos_main_art">
+                        <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define
+                            gran
+                            parte
+                            de
+                            mi,
+                            ya que los que me conocen saben cuanto disfruto y amo los momentos de conexión con la
+                            naturaleza.
+                            Con el
+                            tiempo me di cuenta que desde chiquita le presté mucha atención a nuestro entorno y lo que
+                            pasa
+                            en
+                            él
+                            y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
+                    </article>
+                </div>
+                <div class="col-lg-6 col-md-8 cont-colum">
+                    <img src="img/mica.png" alt="Mica Bergliaffa">
+                    <article class="nos_main_art">
+                        <p>Hola, soy Mica, arquitecta y una de las fundadoras de RUH, pero ademas, como veran,
+                            tambien
+                            soy profe de yoga.
+                            El yoga para mi, es un camino para descubrirse todos los días, es un momento para conectarse
+                            con
+                            el
+                            presente y escucharse
+                            a uno mismo.
+                            Me encanta acompañañar esta practica, con nuestros productos, ya que consolidan los sentidos
+                            con
+                            su
+                            esencia.</p>
+                    </article>
+                </div>
+            </article>
+        </section>
+    </main>
     <!-- footer -->
 
     <footer>
