logo header y footer

--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
     <header>
         <div class="barra">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -257,7 +257,7 @@
                             <div class="card mb-3" style="max-width: 1140px; margin: auto;">
                                 <div class="row g-0 justify-content-center">
                                     <div class="col-md-4 col-sm-8">
-                                        <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="Grounding">
+                                        <img src="img/grounding.png" class="img-fluid rounded-start" alt="Grounding">
                                     </div>
                                     <div class="col-md-8 col-sm-10">
                                         <div class="card-body">
@@ -386,6 +386,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
+                    <img src="logos/logo-sinfondo.png" alt="logo">
                     <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
