--- a/nosotras.html
+++ b/nosotras.html
@@ -33,7 +33,7 @@
     <header>
         <div class="barra">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -168,6 +168,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
+                    <img src="logos/logo-sinfondo.png" alt="logo">
                     <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
