--- a/contacto.html
+++ b/contacto.html
@@ -33,7 +33,7 @@
     <header>
         <div class="barra">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -126,7 +126,7 @@
             <article class="col-lg-6 col-md-10">
                 <div class="form-container">
                     <p class="form-tit">Contactate con nosotras</p>
-                    <form action="form.php" method="POST" class="contacto-form">
+                    <form action="/php/form.php" method="POST" class="contacto-form">
                         <div class="form-row">
                             <label for="full-name">Nombre</label>
                             <input type="text" id="full-name" name="nombre">
@@ -181,6 +181,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
+                    <img src="logos/logo-sinfondo.png" alt="logo">
                     <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
