--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <!-- <meta property="og:image" content="url"> -->
-
+    
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
     <!-- enlance bootstrap -->
@@ -33,7 +33,8 @@
     <header id="header-home">
         <div class="barra">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
+                <img src="logos/logo-sinfondo.png" alt="" class="logo-s-fondo">
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -169,6 +170,16 @@
         </section>
 
 
+<div class="container">
+    <div class="row deco-fila justify-content-center">
+        <div class="col d-flex justify-content-center"> <img src="logos/ic-planta.png" alt="" width=60> </div>
+        <div class="col d-flex justify-content-center"><img src="logos/ic-reciclaje.png" alt="" width=60> </div>
+        <div class="col d-flex justify-content-center"><img src="logos/ic-planta.png" alt="" width=60></div>
+        <div class="col d-flex justify-content-center"><img src="logos/ic-reciclaje.png" alt="" width=60></div>
+    </div>
+</div>
+
+
         <!-- seccion 3 -->
 
         <section class="container">
@@ -179,10 +190,11 @@
                     <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
                 </div>
                 <div class="col-lg-8 col-md-9">
-                    <img class="img_nosotras" src="img/nosotras.jpg" alt="nosotras">
+                    <img class="img_nosotras" src="img/nosotras.png" alt="nosotras">
                 </div>
             </article>
         </section>
+
 
         <!-- footer -->
 
@@ -209,6 +221,7 @@
                             <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                     </div>
                     <div class="logo-f">
+                        <img src="logos/logo-sinfondo.png" alt="logo">
                         <p class="logo-tit-f">| Ruh - Esencia |</p>
                     </div>
                 </div>
