--- a/mayorista.html
+++ b/mayorista.html
@@ -33,7 +33,7 @@
     <header>
         <div class="barra">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -90,7 +90,7 @@
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.jpg" alt="evento1">
+                <img src="img/mayorista1-.png" alt="evento1">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -119,7 +119,7 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/IMG_2448.jpg" alt="evento5">
+                <img src="img/mayorista2.png" alt="evento5">
             </figure>
         </div>
         <div class="box-img">
@@ -154,6 +154,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
+                    <img src="logos/logo-sinfondo.png" alt="logo">
                     <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
