agregando Seo en todas las pag

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <!-- <meta property="og:image" content="url"> -->
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>
+    <title>Ruh | Esencia - Contacto.</title>
 </head>
 
 <body>
