--- a/mayorista.html
+++ b/mayorista.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <!-- <meta property="og:image" content="url"> -->
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/home3.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>
+    <title>Ruh | Esencia - Mayorista.</title>
 </head>
 
 <body>
@@ -90,7 +90,7 @@
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/mayorista1-.png" alt="evento1">
+                <img src="img/evento1.jpg" alt="evento1">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -104,17 +104,17 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/Evento4.png" alt="evento2">
+                <img src="img/evento4.png" alt="evento2">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento-1.png" alt="evento3">
+                <img src="img/evento3.png" alt="evento3">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/IMG_2435.jpg" alt="evento4">
+                <img src="img/mayorista1.png" alt="evento4">
             </figure>
         </div>
         <div class="box-img">
