--- a/productos.html
+++ b/productos.html
@@ -10,11 +10,11 @@
     <meta name="keywords"
         content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Esencias y aromas naturales">
+    <meta property="og:title" content="Velas aromaticas, sahumos y defumadores">
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <!-- <meta property="og:image" content="url"> -->
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-velas.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>
+    <title>Ruh | Esencia - Nuestros Productos</title>
 </head>
 
 <body>
@@ -82,10 +82,10 @@
     <!-- main  -->
 
     <section class="tit">
-        <h2>Nuestos Productos</h2>
+        <h2>Nuestros Productos</h2>
     </section>
 
-   
+
     <section class="container">
         <h3 class="prod-tit" id="sahumerios"> * Sahumerios</h3>
         <article class="row card-row">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
                 <div class="card card-home">
                     <img src="img/prod-porta-shau.png" class="card-img-top" alt="Porta Sahumerios">
@@ -180,7 +180,7 @@
         </article>
     </section>
 
-  
+
     <section class="container">
         <h3 class="prod-tit" id="velas"> * Velas de cera vegetal</h3>
         <article class="row card-row">
