--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <!-- <meta property="og:image" content="url"> -->
-    
-    <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
+   <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
+
+   <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
     <!-- enlance bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
