--- a/info.html
+++ b/info.html
@@ -14,9 +14,9 @@
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <!-- <meta property="og:image" content="url"> -->
+<meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/cuidado-ambiental.jpeg"> 
 
-    <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
     <!-- enlance bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>
+    <title>Ruh | Esencia - Info interesante.</title>
 
 </head>
 
@@ -237,11 +237,21 @@
         </section>
 
         <h2>Ser concientes de nuestra Naturaleza</h2>
-        
+        <section class="contaiener">
+            <article class="row justify-content-center text-naturaleza">
+                <div class="col-md-8">
+                    <p>Dede RUH queremos aportar un poco de conciencia ambiental para mejorar nuestros hábitos y
+                        relacionarnos de una manera más cuidadosa con el planeta, les compartimos algunos Tips de como
+                        cuidar nuestro medio ambiente incorporando nuevos habitos.</p>
+                </div>
+                <div class="col-md-3 d-flex justify-content-center"> 
+                    <img src="logos/ic-planta.png" alt="" width="80">
+                    <img src="logos/ic-reciclaje.png" alt="" width="80"> </div>
+            </article>
+        </section>
+
+
         <section class="container">
-            <p>Ademas de ofrecerles nuestros
-                productos, dede RUH queremos aportar un poco de conciencia ambiental para mejorar nuestros hábitos y
-                relacionarnos de una manera más cuidadosa con el planeta, les compartimos algunos Tips de como cuidar nuestro medio ambiente incorporando nuevos habitos.</p>
             <article class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingfour">
