--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Contacto.</title>
+    <title>Ruh | Esencia - Contacto</title>
 </head>
 
 <body>
