agregando Seo en cada pag

--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+    <meta name="description" content="Sigamos conectados, visitanos en nuestras redes sociales, ruh.esencia, instagram y facebook, o comunicate por whatsapp, correo o dejanos tu consulta en la web.">
     <meta name="keywords"
-        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+        content="dejanos tu consulta, contactanos, redes sociales, ruh.esencia, instagram, facebook, Productos naturales, velas de sojas, 100% cera vegetal,  venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Esencias y aromas naturales">
+    <meta property="og:title" content="Contactate con ruh esencia">
     <meta property="og:description"
-        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+        content="Dejanos tu consulta y sigamos conectados en nuestras redes Sociales">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
 
