--- a/mayorista.html
+++ b/mayorista.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description"
-        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+        content="Produccion y venta al por mayor de velas aromaticas 100% cera vegetal, con variedad de aroma y decoracion, elegi la que mas te guste para tu evento, local o reventa.">
     <meta name="keywords"
-        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+        content="Productos naturales, velas de sojas, 100% cera vegetal, decoracion, aroma, esencia, artesanal, venta mayorista, local, negocio, reventa, evento, souvenir">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Esencias y aromas naturales">
+    <meta property="og:title" content="Venta mayorista de Velas de soja 100% cera vegetal">
     <meta property="og:description"
-        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+        content="Podes elegir modelo del envase, decoración y etiqueta, te proponemos opciones de diseño o concretamos tu idea">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/home3.png">
 
@@ -90,7 +91,7 @@
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.jpg" alt="evento1">
+                <img src="img/evento1.jpg" alt="Evento, casameinto">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -104,27 +105,27 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento4.png" alt="evento2">
+                <img src="img/evento4.png" alt="Souvenir de evento">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento3.png" alt="evento3">
+                <img src="img/evento3.png" alt="Velas">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/mayorista1.png" alt="evento4">
+                <img src="img/mayorista1.png" alt="Mesa principal novios">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/mayorista2.png" alt="evento5">
+                <img src="img/mayorista2.png" alt="Mesa casamiento">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento2.png" alt="evento6">
+                <img src="img/evento2.png" alt="Souvenir de velas con flores secas">
             </figure>
         </div>
     </section>
