--- a/productos.html
+++ b/productos.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+        content="Venta de velas aromaticas 100% cera vegetal, sahumos y defumadores, con variedad de esencias y aromas, productos 100% artesanal y natural.">
     <meta name="keywords"
-        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo.">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Velas aromaticas, sahumos y defumadores">
     <meta property="og:description"
-        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+        content="Velas aromaticas 100% cera vegetal, variedad de sahumos y defumadores con distintas esencias, aromas y decoracion">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-velas.png">
 
