--- a/info.html
+++ b/info.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+        content="Sobre nuestros productos, ¿que es, y como sahumar?, curiosidades que tal vez no conocias sobre el palo santo y nuestras velas, ademas te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
     <meta name="keywords"
-        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+        content="sahumar, limpieza de energia, palo santo, peligo de extincion, velas de sojas, 100% cera vegetal, grounding, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Esencias y aromas naturales">
+    <meta property="og:title" content="Curiosidades e informacion interesante">
     <meta property="og:description"
-        content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
+        content="Te contamos un poco mas sobre nuestros productos y te compartimos nuestra pasion por la naturaleza y tips para cuidarla">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
 <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/cuidado-ambiental.jpeg"> 
 
@@ -94,7 +94,7 @@
                     <h3 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            El rirual de Sahumar
+                            El ritual de Sahumar
                         </button>
                     </h3>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
