--- a/nosotras.html
+++ b/nosotras.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Produccion de velas aromaticas 100% cera vegetal y venta de sahumos con variedad de esencias. Amantes de la naturaleza, te brindamos tips para cuidar el medio ambiente, e incorporar nuevos habitos.">
+        content="Ruh nace desde la conexión con la naturaleza activando nuestros sentidos atravez de esencias, darnos espacio para desconectar y re-conectar con nosotros mismos y alimentar nuestro crecimiento personal.">
     <meta name="keywords"
-        content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
+        content="Nosotras, Productos naturales, esencias, desconexion, limpieza de energia, yoga, medio ambiente, naturaleza, nuestros sentidos">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Nosotras, Quienes somos?">
+    <meta property="og:title" content="Nosotras, ¿Quienes somos?">
     <meta property="og:description"
         content="Nosotras, Jose y Mica, apacionadas por la naturaleza y las esencias">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
