--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Info interesante.</title>
+    <title>Ruh | Esencia - Informacion relevante</title>
 
 </head>
 
