--- a/mayorista.html
+++ b/mayorista.html
@@ -25,7 +25,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Mayorista.</title>
+    <title>Ruh | Esencia - Mayorista</title>
 </head>
 
 <body>
@@ -91,7 +91,7 @@
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.jpg" alt="Evento, casameinto">
+                <img src="img/evento1.png" alt="Evento, casameinto">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -105,7 +105,7 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento4.png" alt="Souvenir de evento">
+                <img src="img/evento2png.png" alt="Souvenir de evento">
             </figure>
         </div>
         <div class="box-img">
@@ -115,17 +115,17 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/mayorista1.png" alt="Mesa principal novios">
+                <img src="img/evento4.png" alt="Mesa principal novios">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/mayorista2.png" alt="Mesa casamiento">
+                <img src="img/evento5.png" alt="Mesa casamiento">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento2.png" alt="Souvenir de velas con flores secas">
+                <img src="img/evento6.png" alt="Souvenir de velas con flores secas">
             </figure>
         </div>
     </section>
