--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- enlace css  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Ruh | Esencia - Productos Naturales.</title>
+    <title>Ruh | Esencia - Productos Naturales</title>
 </head>
 
 <body>
@@ -97,19 +97,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/carousel-1.png" class="d-block w-100 " alt="portada">
+                <img src="img/carousel-1.png" class="d-block w-100 " alt="Portada Velas">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos. </p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/carousel-2.png" class="d-block w-100" alt="portada1" sizes="auto">
+                <img src="img/carousel-2.png" class="d-block w-100" alt="Portada sahumadores" sizes="auto">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/carousel-3.png" class="d-block w-100" alt="portada2">
+                <img src="img/carousel-3.png" class="d-block w-100" alt="Portada kit de productos">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel"> Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
@@ -190,7 +190,7 @@
                     <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
                 </div>
                 <div class="col-lg-8 col-md-9">
-                    <img class="img_nosotras" src="img/nosotras.png" alt="nosotras">
+                    <img class="img_nosotras" src="img/nosotras.png" alt="Nosotras">
                 </div>
             </article>
         </section>
