--- a/mayorista.html
+++ b/mayorista.html
@@ -115,7 +115,7 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento4.png" alt="Mesa principal novios">
+                <img src="img/Evento4.png" alt="Mesa principal novios">
             </figure>
         </div>
         <div class="box-img">
