--- a/info.html
+++ b/info.html
@@ -320,7 +320,7 @@
                         <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFive" aria-expanded="false"
                             aria-controls="flush-collapseFive">
-                            ¿Cuidas el medio abiente?
+                            Eco friendly 
                         </button>
                         </h2>
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
@@ -359,7 +359,7 @@
                                                     cómo cuidar al medioambiente, somos
                                                     parte de la
                                                     naturaleza.</p>
-                                                <h5>"NO HAY PLAN, PORQUE NO TENEMOS OTRO PLANETA”</h5>
+                                                <h5>"NO HAY PLAN B, PORQUE NO TENEMOS OTRO PLANETA”</h5>
                                             </div>
                                         </div>
                                     </div>
