--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <header id="header-home">
         <div class="barra">
             <div class="logo">
-                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img"></a>
-                <img src="logos/logo-sinfondo.png" alt="" class="logo-s-fondo">
+                <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img">
+                    <img src="logos/logo-index.png" alt="" class="logo-s-fondo"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -141,15 +141,15 @@
 
         <div class="container">
             <div class="row h-100 justify-content-center">
-                <div class="col-lg-4 col-md-6 align-self-center">
+                <div class="col-lg-4 col-md-6 align-self-center first-text">
                     <h3 class="tit-segunda-section">PRODUCTOS NATURALES</h3>
                     <p class="text-imp">Velas 100% origen vegetal con variedad de aromas y flores
                         naturales</p>
                     <a href="productos.html" class="btn btn-primary">Ver Productos</a>
                 </div>
-                <div class="col-lg-8 col-md-10 col-sm-12">
+                <div class="col-lg-8 col-md-10 col-sm-9">
                     <article class="row justify-content-center">
-                        <div class="col-md-5 col-sm-9 p-2 mt-4 d-flex flex-nowrap">
+                        <div class="col-md-5 col-sm-9 p-2 mt-4 d-flex flex-nowrap justify-content-center">
                             <div class="card card-home">
                                 <a href="mayorista.html" class="card-img-top">
                                     <img src="img/home3.png" alt="Mayorista"></a>
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-5 col-sm-9 p-2 mt-4 d-flex flex-nowrap">
+                        <div class="col-md-5 col-sm-8 p-2 mt-4 d-flex flex-nowrap justify-content-center">
                             <div class="card card-home">
                                 <a href="mayorista.html" class="card-img-top"> <img src="img/home2.png"
                                         alt="Curiosidades"></a>
@@ -184,11 +184,11 @@
 
         <section class="productos-destacados">
             <h2>Productos Destacados</h2>
-            <div class="container-sm">
+            <div class="container">
                 <div class="row justify-content-center mb-5">
-                    <div class="col-md-10">
+                    <div class="col-md-10 col-sm-12">
                         <section id="thumbnail-carousel" class="splide"
-                            aria-label="The carousel with thumbnails. Selecting a thumbnail will change the Beautiful Gallery carousel.">
+                            aria-label="thumbnails">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <li class="splide__slide">
@@ -265,7 +265,7 @@
                             <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                     </div>
                     <div class="logo-f">
-                        <img src="logos/logo-sinfondo.png" alt="logo">
+                        <img src="logos/logo-footer.png" alt="logo">
                         <p class="logo-tit-f">Ruh - Esencia</p>
                     </div>
                 </div>
