--- a/info.html
+++ b/info.html
@@ -359,7 +359,7 @@
                                                     cómo cuidar al medioambiente, somos
                                                     parte de la
                                                     naturaleza.</p>
-                                                <h5>"NO HAY PLAN B, PORQUE NO TENEMOS OTRO PLANETA”</h5>
+                                                <h4>"NO HAY PLAN B, PORQUE NO TENEMOS OTRO PLANETA”</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -396,7 +396,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-sinfondo.png" alt="logo">
+                    <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
             </div>
