--- a/mayorista.html
+++ b/mayorista.html
@@ -85,7 +85,8 @@
     <!-- main -->
 
     <section class="mayor_tit">
-        <h2>Venta de velas por mayor; para eventos, negocios o reventa.</h2>
+        <h2>Venta de velas por mayor;</h2>
+        <p>para eventos, negocios o reventa</p>
     </section>
 
     <section class="container-img">
@@ -96,8 +97,8 @@
         </div>
         <div class="box-img evento-descripcion">
             <figure>
-                <p>Podes elegir modelo del envase, decoración y etiqueta (te proponemos opciones de diseño o concretamos
-                    tu idea)</p>
+                <p> Elegí el modelo del envase, decoración y etiqueta, y concretamos
+                    tu idea y diseño.</p>
                 <div class="btn">
                     <a href="contacto.html"> ESCRIBINOS Y <br>TE ASESORAMOS!</a> </a>
                 </div>
@@ -155,7 +156,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-sinfondo.png" alt="logo">
+                    <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
             </div>
