--- a/productos.html
+++ b/productos.html
@@ -86,7 +86,7 @@
     </section>
 
 
-    <section class="container">
+    <section class="container pb-5">
         <h3 class="prod-tit" id="sahumerios"> * Sahumerios</h3>
         <article class="row card-row">
             <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
@@ -126,7 +126,7 @@
     </section>
 
 
-    <section class="container">
+    <section class="container pb-5">
         <h3 class="prod-tit" id="sahumos"> * Sahumos y Defumadores</h3>
         <article class="row card-row">
             <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
@@ -181,7 +181,7 @@
     </section>
 
 
-    <section class="container">
+    <section class="container pb-5">
         <h3 class="prod-tit" id="velas"> * Velas de cera vegetal</h3>
         <article class="row card-row">
             <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
