--- a/contacto.html
+++ b/contacto.html
@@ -180,7 +180,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-sinfondo.png" alt="logo">
+                    <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
             </div>
