--- a/contacto.html
+++ b/contacto.html
@@ -82,7 +82,7 @@
 
     <!-- main  -->
 
-    <main class="container">
+    <main class="container contacto-page">
         <section class="row my-5 justify-content-center">
             <article class="col-lg-6 col-md-10">
                 <div class="row h-100">
@@ -93,16 +93,12 @@
                             <p class="wp-n">+54 9 3512297942</p>
                         </div>
                         <div class="item_contacto">
-                            <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
+                            <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30 >
                             <p>ruh.esencia@gmail.com</p>
-                        </div>
-                        <div class="item_contacto">
-                            <img src="logos/ubicacion-icono.svg" alt="Ubicación" widht=30 height=30>
-                            <p>Recta Martinolli 7759</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 align-items-center">
-                        <p class="contacto-tit">Nuestas Redes Sociales</p>
+                        <p class="contacto-tit">Nuestras Redes</p>
                         <div class="item_redes">
                             <img src="logos/Insta-logo.png" alt="Instagram" widht=40 height=40>
                             <a href="https://www.instagram.com/ruh.esencia/" target="_blank"
@@ -115,14 +111,20 @@
                         </div>
                     </div>
                     <div class="col-12 mb-5">
+                        <p class="contacto-tit">¿Donde estamos?</p>
+                        <div class="item_contacto">
+                            <img src="logos/ubicacion-icono.svg" alt="Ubicación" widht=30 height=30>
+                            <p>Recta Martinolli 7759</p>
+                        </div>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
-                            title="Ubicacion-mapa" width="600" height="450" style="border:0;" allowfullscreen=""
-                            loading="lazy" class="mapa"></iframe>
+                            title="Ubicacion-mapa" width="600" height="350" style="border:0;" allowfullscreen=""
+                            loading="lazy" class="mapa">
+                        </iframe>
                     </div>
                 </div>
             </article>
-            <article class="col-lg-6 col-md-10">
+            <article class="col-lg-5 col-md-8 col-sm-8 my-2">
                 <div class="form-container">
                     <p class="form-tit">Contactate con nosotras</p>
                     <form action="/php/form.php" method="POST" class="contacto-form">
