--- a/productos.html
+++ b/productos.html
@@ -129,7 +129,7 @@
     <section class="container pb-5">
         <h3 class="prod-tit" id="sahumos"> * Sahumos y Defumadores</h3>
         <article class="row card-row">
-            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
                 <div class="card card-home">
                     <img src="img/prod-sahumo-1.png" class="card-img-top" alt="Ramillo de Sahumo">
                     <div class="card-body">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
                 <div class="card card-home">
                     <img src="img/prod-Pastillas.png" class="card-img-top" alt="Pastillas defumadoras">
                     <div class="card-body">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
                 <div class="card card-home">
                     <img src="img/prod-piramide.png" class="card-img-top" alt="Piramides defumadoras">
                     <div class="card-body">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-4 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
                 <div class="card card-home">
                     <img src="img/prod-bombitas.png" class="card-img-top" alt="Bombitas defumadores">
                     <div class="card-body">
@@ -229,7 +229,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-sinfondo.png" alt="logo">
+                    <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
             </div>
